<resources>
    <string name="app_name">마음편</string>
    <string name="iv">iv</string>
    <string name="btn">btn</string>
    <string name="text_01">로그아웃</string>
    <string name="text_02">긴급</string>
    <string name="text_03">표시</string>
    <string name="text_04">CCTV</string>
    <string name="text_05">안전 시설물</string>
    <string name="text_06">경찰서</string>
    <string name="text_07">지킴이집</string>
    <string name="text_08">서비스</string>
    <string name="text_09">안전경로 안내</string>
    <string name="text_10">긴급 알림</string>
    <string name="text_11">근처 안심경로로\n안내를 시작할까요?</string>
    <string name="text_12">취소</string>
    <string name="text_13">안내 시작</string>
    <string name="text_14">알림</string>
    <string name="text_15">실시간 알림</string>
    <string name="text_16">등록</string>
    <string name="text_17">보호자 및 자녀 등록</string>
    <string name="text_18">내역</string>
    <string name="text_19">경로 내역</string>
    <string name="text_20">신고 내역</string>
    <string name="text_21">고객 지원</string>
    <string name="text_22">공지사항</string>
    <string name="text_23">도움말</string>
    <string name="text_24">개인정보처리방침</string>
    <string name="text_25">회원탈퇴</string>
    <string name="text_26">로그아웃</string>
    <string name="text_27">경유</string>
    <string name="text_28">도착</string>
    <string name="text_29">내위치</string>
    <string name="text_30">안내 취소</string>
    <string name="text_31">안내 시작</string>
    <string name="text_32">도착지를 지정해주세요.</string>
    <string name="text_33">종료</string>
    <string name="text_34">앱을 종료하시겠습니까?</string>
    <string name="text_35">로그아웃 하시겠습니까?</string>
    <string name="text_36">회원탈퇴 하시겠습니까?</string>
    <string name="text_37">보호자 등록</string>
    <string name="text_38">보호자 선택</string>
    <string name="text_39">미등록</string>
    <string name="text_40">등록된 보호자가 없습니다.</string>
    <string name="text_41">등록된 자녀가 없습니다.</string>
    <string name="text_42">거절</string>
    <string name="text_43">수락</string>
    <string name="text_44">보호자 등록을 해지하시겠습니까?</string>
    <string name="text_45">해지하기</string>
    <string name="text_46">재전송</string>
    <string name="text_47">재전송하시겠습니까?</string>
    <string name="text_48">재전송하기</string>
    <string name="text_49">닫기</string>
</resources>