<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_image_round"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/text_36"
        android:textColor="@color/black_1e1f1f"
        android:textSize="18dp"
        android:textStyle="normal"
        android:typeface="normal"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/btnSecession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_white_rd_8"
        android:backgroundTint="@color/red_f55b63"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/text_25"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:textStyle="normal"
        android:typeface="normal"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_rd_8"
        android:backgroundTint="@color/gray_d2d2d2"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/text_12"
        android:textColor="@color/black_1e1f1f"
        android:textSize="16dp"
        android:textStyle="normal"
        android:typeface="normal"
        tools:ignore="SpUsage" />

</LinearLayout>