<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="120dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_default_profile"
            app:civ_border_color="@color/white"
            app:civ_border_overlay="true"
            app:civ_border_width="1dp"
            app:civ_circle_background_color="@color/blue_9A283081"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile">

            <TextView
                android:id="@+id/tv_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:textColor="@color/blue_283081"
                android:textSize="16dp"
                android:textStyle="bold"
                android:typeface="normal"
                tools:ignore="SpUsage"
                tools:text="마음편히 쉬세요" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="님"
                android:textColor="@color/black_1e1f1f"
                android:textSize="16dp"
                android:textStyle="normal"
                android:typeface="normal"
                tools:ignore="HardcodedText,SpUsage" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cl_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rd_283081_16"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_nickname">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_14"
                android:textColor="@color/black_1e1f1f"
                android:textSize="16dp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/gray_d2d2d2" />

            <LinearLayout
                android:id="@+id/ll_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_alarm" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/text_15"
                    android:textColor="@color/black_1e1f1f"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:typeface="normal"
                    tools:ignore="SpUsage" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:adjustViewBounds="true"
                    android:checked="false" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cl_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rd_283081_16"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_alarm">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_16"
                android:textColor="@color/black_1e1f1f"
                android:textSize="16dp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/gray_d2d2d2" />

            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_register" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/text_17"
                    android:textColor="@color/black_1e1f1f"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:typeface="normal"
                    tools:ignore="SpUsage" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_angle_shape" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cl_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rd_283081_16"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_register">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_18"
                android:textColor="@color/black_1e1f1f"
                android:textSize="16dp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/gray_d2d2d2" />

            <LinearLayout
                android:id="@+id/ll_route_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_route" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/text_19"
                    android:textColor="@color/black_1e1f1f"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:typeface="normal"
                    tools:ignore="SpUsage" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_report_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_report" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/text_20"
                    android:textColor="@color/black_1e1f1f"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:typeface="normal"
                    tools:ignore="SpUsage" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cl_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rd_283081_16"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_history">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_21"
                android:textColor="@color/black_1e1f1f"
                android:textSize="16dp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/gray_d2d2d2" />

            <LinearLayout
                android:id="@+id/ll_noti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_noti" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/text_22"
                    android:textColor="@color/black_1e1f1f"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:typeface="normal"
                    tools:ignore="SpUsage" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_angle_shape" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_help" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/text_23"
                    android:textColor="@color/black_1e1f1f"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:typeface="normal"
                    tools:ignore="SpUsage" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_angle_shape" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_policy" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/text_24"
                    android:textColor="@color/black_1e1f1f"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:typeface="normal"
                    tools:ignore="SpUsage" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_angle_shape" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/text_26"
                    android:textColor="@color/black_1e1f1f"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:typeface="normal"
                    tools:ignore="SpUsage" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/iv"
                    android:src="@drawable/ic_angle_shape" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="80dp"
                android:text="@string/text_25"
                android:textColor="@color/gray_6D6C6C"
                android:textSize="14dp"
                android:textStyle="normal"
                android:typeface="normal"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>